--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 </head>
 <body>
     <h1>Embedded OneDrive Content</h1>
-    <iframe src="https://onedrive.live.com/embed?resid=9317B8B896B3A169%2132464&authkey=!AO8OmFOFiTnc80I" 
-            width="320" 
-            height="320" 
-            frameborder="0" 
-            scrolling="no" 
-            allowfullscreen>
-    </iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/og_sdRYf_JM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
