--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OneDrive Embed</title>
+    <title>ChatGPT Link</title>
 </head>
 <body>
-    <h1>Embedded OneDrive Content</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6ar72m4PLW0?si=dMBPq9BHEbM0bUvr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>Welcome to the ChatGPT Page</h1>
+    <p>Click the link below to visit the ChatGPT page on OpenAI's website:</p>
+    <a href="https://www.openai.com/chatgpt" target="_blank">Go to ChatGPT</a>
 </body>
 </html>
