--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Link</title>
+    <title>Redirecting to ChatGPT</title>
+    <meta http-equiv="refresh" content="0; url=https://www.openai.com/chatgpt">
 </head>
 <body>
-    <h1>Welcome to the ChatGPT Page</h1>
-    <p>Click the link below to visit the ChatGPT page on OpenAI's website:</p>
-    <a href="https://www.openai.com/chatgpt" target="_blank">Go to ChatGPT</a>
+    <p>If you are not redirected automatically, follow this <a href="https://www.openai.com/chatgpt">link to ChatGPT</a>.</p>
 </body>
 </html>
