--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to ChatGPT</title>
-    <meta http-equiv="refresh" content="0; url=https://www.openai.com/chatgpt">
+    <title>Embed ChatGPT Page</title>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            background-color: #f0f0f0;
+        }
+        .iframe-container {
+            width: 80%;
+            height: 80%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://www.openai.com/chatgpt">link to ChatGPT</a>.</p>
+    <div class="container">
+        <div class="iframe-container">
+            <iframe src="https://chat.openai.com/chat"></iframe>
+        </div>
+    </div>
 </body>
 </html>
